--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Dosis:wght@400;600&family=Open+Sans:ital,wght@0,400;0,600;1,700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,5 +22,5 @@ body {
 }
 
 .wrapper {
-  @apply max-w-[1240];
+  @apply max-w-[1240px];
 }
